# voicesmith

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  AUTHORS  CHANGELOG  CNAME  COPYING  INSTALL  Makefile  PLAYGROUND.md  README.md  THANKS  build.gradle.kts  index.html  params.json  settings.gradle.kts
gradle/: libs.versions.toml
sandbox/: COLA.py  Chorus.py  Cosine.py  LuenbergerGainHelper.m  NoiseGateTest.m  Oscillator.py  OscillatorTest.py  Phasogram.py  PitchShifting.py  QuickAndDirty.py  RMS.py  STFT.py  TestAutoMute.py  TestAwgnFilter.py  TestOscillator.py  TestSTFT.py  TestVAD.py  UnderstandingVAD.py  VAD.py  WAV.py
stylesheets/: styles.css  stylesheet.css
tests/: AndroidManifest.xml  Makefile  ant.properties  build.xml
voicesmith/: .classpath  .project  Makefile  (+5 more)
voicesmith/src/main/cpp/de/jurihock/voicesmith/: CMakeLists.txt  Header.h  Source.h
voicesmith/src/main/cpp/de/jurihock/voicesmith/cmake/: fmt.cmake  oboe.cmake  pffft.cmake  pocketfft.cmake  qdft.cmake  readerwriterqueue.cmake  vad.cmake
voicesmith/src/main/cpp/de/jurihock/voicesmith/etc/: Arctangent.h  Debouncer.h  Event.h  FFT.h  FIFO.h  Format.h  JNA.h  Log.cpp  Log.h  Noise.h  Oscillator.h  QDFT.h  Timer.h  Vocoder.h  Wobbulator.h
voicesmith/src/main/cpp/de/jurihock/voicesmith/etc/FFT/: PocketFFT.h  PrettyFastFFT.h
voicesmith/src/main/cpp/de/jurihock/voicesmith/fx/: AudioEffect.h  BypassEffect.h  ChainEffect.h  DelayEffect.cpp  DelayEffect.h  MultiEffect.h  NoiseEffect.h  NullEffect.h  PitchShiftEffect.cpp  PitchShiftEffect.h  PitchTimbreShiftEffect.cpp  PitchTimbreShiftEffect.h  SineEffect.h  StereoChainEffect.h  SweepEffect.h  VadEffect.cpp  VadEffect.h
voicesmith/src/main/cpp/de/jurihock/voicesmith/io/: AudioBlock.cpp  AudioBlock.h  AudioBlockQueue.cpp  AudioBlockQueue.h  AudioBuffer.cpp  AudioBuffer.h  AudioBufferQueue.cpp  AudioBufferQueue.h  AudioEvent.h  AudioEventCode.h  AudioEventCodeExtensions.h  AudioPipeline.cpp  AudioPipeline.h  AudioSink.cpp  AudioSink.h  AudioSource.cpp  AudioSource.h  AudioStream.cpp  AudioStream.h
voicesmith/src/main/cpp/de/jurihock/voicesmith/libs/: cpm.cmake  easyloggingpp.cmake  eventpp.cmake  fmt.cmake  pffft.cmake  pocketfft.cmake  readerwriterqueue.cmake  stftpitchshift.cmake  vad.cmake
voicesmith/src/main/cpp/de/jurihock/voicesmith/plug/: AudioPlugin.h  AudioPluginCallcode.h  AudioPluginFactory.cpp  AudioPluginFactory.h  TestAudioPlugin.cpp  TestAudioPlugin.h
(+202 files in other folders)
